# 2d_game

./: .gitignore  CMakeLists.txt  README.md
include/: fruit.h  game.h  ghost.h
src/: fruit.cpp  game.cpp  game_tests.cpp  ghost.cpp  main.cpp
